# Productivity-Agent-Tool

./: .gitignore  README.md  main.py  pyproject.toml  tools_check.py
agent/: agent.py  system_prompt.py
agent/tools/: calendar_tool.py  email_tool.py  notes_tool.py  search_tool.py
data/: calendar.json  email.json
mcp_server/: notes_server.py
